# Air-Drawing

./: .gitignore  ARTICLE.md  AirDrawing.spec  CASE_STUDY.md  Construction.md  README.md  build_exe.py  build_icon.py  main.py  pyproject.toml  version_info.txt
app/: canvas.py  config.py  tools.py  ui.py
core/: camera.py  gesture_engine.py  hand_tracker.py  noise_filter.py  profiler.py  state_manager.py
ml/: benchmark.py  dataset_collector.py  gesture_customizer.py  model_inference.py  trainer.py
tests/: test_distribution_shift.py  test_gesture_engine.py  test_ml_features.py  test_noise_filter.py  test_profiler.py
