[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "air-drawing"
version = "1.0.0"
description = "Draw in the air with hand gestures using webcam and MediaPipe"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "Umairism"},
]
keywords = ["hand-tracking", "gesture-recognition", "opencv", "mediapipe", "drawing"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Education",
    "Topic :: Scientific/Engineering :: Image Recognition",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Operating System :: OS Independent",
]
dependencies = [
    "opencv-python>=4.8.0",
    "mediapipe>=0.10.9",
    "numpy>=1.24.0",
]

[project.optional-dependencies]
ml = ["scikit-learn>=1.3.0"]
dev = ["scikit-learn>=1.3.0", "pyinstaller>=6.0"]

[project.scripts]
air-drawing = "main:main"

[project.urls]
Homepage = "https://github.com/Umairism/Air-Drawing"
Repository = "https://github.com/Umairism/Air-Drawing"
Issues = "https://github.com/Umairism/Air-Drawing/issues"

[tool.setuptools.packages.find]
include = ["core*", "app*", "ml*"]

[tool.setuptools.package-data]
"*" = ["*.task"]
